--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Cyber Security Snake Game – Level 1</title>
+<title>Cyber Security Snake Game – Levels 1–3</title>
 <style>
   body { margin:0; background:#0e0e0e; color:#fff; font-family:Arial,sans-serif; text-align:center; }
   h1 { margin:14px 0; color:#00e0ff; font-size:20px; }
   #gameContainer { display:flex; flex-direction:column; align-items:center; }
   canvas { background:#000; border:2px solid #00e0ff; border-radius:10px; margin-top:8px; touch-action:none; }
-  #question { color:#00e0ff; font-size:16px; margin:10px 0 6px; }
+  #hud { margin-top:6px; font-size:14px; color:#b8faff; }
+  #question { color:#00e0ff; font-size:16px; margin:10px 0 6px; min-height:22px; }
   #options { display:flex; flex-direction:column; gap:6px; width:92%; max-width:380px; margin:0 auto 8px; }
   .opt-row { display:flex; align-items:center; gap:10px; padding:8px 10px; border:1px solid #00e0ff; border-radius:8px; background:#121212; }
   .swatch { width:18px; height:18px; border:1px solid #fff; border-radius:3px; flex:0 0 18px; }
@@ -22,7 +23,7 @@
     display:none; margin:12px 0 20px; background:#00ff88; color:#000; border:none;
     padding:10px 20px; border-radius:8px; font-size:17px; cursor:pointer;
   }
-  /* Leaderboard fixed at top-right */
+  /* Leaderboard pinned top-right */
   .floating-leaderboard {
     position:fixed; top:10px; right:10px; z-index:100;
     background:#ffd54f; color:#000; border:none; border-radius:20px;
@@ -37,12 +38,15 @@
 </style>
 </head>
 <body>
-  <h1>🐍 Cyber Security Snake Game – Level 1</h1>
+  <h1>🐍 Cyber Security Snake Game – Levels 1–3</h1>
 
+  <!-- Floating leaderboard button -->
   <a class="floating-leaderboard" id="leaderboardBtn" target="_blank" rel="noopener">View Leaderboard 🏆</a>
 
   <div id="gameContainer">
     <canvas id="gameCanvas" width="300" height="300"></canvas>
+
+    <div id="hud">Level <span id="lv">1</span> • Questions answered: <span id="qdone">0</span>/5 • Score: <span id="sc">0</span></div>
 
     <div id="question"></div>
     <div id="options"></div>
@@ -60,6 +64,7 @@
     <button id="submitBtn">Submit Score 🏆</button>
   </div>
 
+  <!-- Invisible form + iframe = CORS-proof submission -->
   <iframe name="hidden_iframe" style="display:none"></iframe>
   <form id="scoreForm" method="POST" target="hidden_iframe" style="display:none">
     <input type="hidden" name="name" />
@@ -69,66 +74,83 @@
   </form>
 
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbwyhRoswSaVI7FRiy-miuUuVrlaLitre_EpxmXloe5zMBfQdXFZAh-w5CmPc09LIjsyWQ/exec";
-const leaderboardURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTb9gCePuU5XZNkMwgcitPhLG4BHrSNUbSM24lLMF1UiU84SSLIqlXtIinVYZviBOYx6g3RZEEn__0D/pubhtml";
+/* =================== CONFIG =================== */
+const scriptURL = "https://script.google.com/macros/s/AKfycbwyhRoswSaVI7FRiy-miuUuVrlaLitre_EpxmXloe5zMBfQdXFZAh-w5CmPc09LIjsyWQ/exec"; // your working /exec URL
+const leaderboardURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTb9gCePuU5XZNkMwgcitPhLG4BHrSNUbSM24lLMF1UiU84SSLIqlXtIinVYZviBOYx6g3RZEEn__0D/pubhtml"; // published sheet
 document.getElementById("leaderboardBtn").href = leaderboardURL;
 document.getElementById("scoreForm").action = scriptURL;
 
+/* =================== GAME STATE =================== */
 const canvas = document.getElementById("gameCanvas");
 const ctx = canvas.getContext("2d");
 const box = 15;
 let snake = [{ x:5*box, y:5*box }];
 let dir = "RIGHT";
+let queuedDir = "RIGHT"; // avoids missing quick taps
 let score = 0;
-let speed = 340;
-let foods = [];
-const colors = ["red","yellow","green","blue"];
-let loopId = null;
+let foods = [];                    // 4 color options on grid
+const colors = ["red","yellow","green","blue"]; // A,B,C,D
+let level = 1;
+const levelSpeeds = {1:340, 2:280, 3:240}; // ms per move (lower = faster)
+let moveInterval = levelSpeeds[level];
+let acc = 0, lastTs = 0;           // for requestAnimationFrame timing
+let running = true;
 
-const questionsPerLevel = 5;
-let asked = [];
+const perLevelCount = 5;           // questions per level
+let answeredInLevel = 0;
 
-const allQuestions = [
-  { q:"Which is a strong password?", opts:["123456","password","Q#4tY9$2","abcdef"], a:2 },
-  { q:"What is phishing?", opts:["Fishing","Tricking users","Video chat","Virus"], a:1 },
-  { q:"Firewall protects your?", opts:["Network","Printer","Battery","Display"], a:0 },
-  { q:"Safe email practice?", opts:["Click all links","Ignore spam","Share passwords","Open attachments"], a:1 },
-  { q:"Which one is NOT malware?", opts:["Trojan","Worm","Antivirus","Spyware"], a:2 },
-  { q:"What does 2FA add?", opts:["Faster Wi-Fi","Extra verification","More storage","More tabs"], a:1 },
-  { q:"HTTPS means…", opts:["Secure connection","More ads","Free data","Higher speed"], a:0 },
-  { q:"Best place for passwords?", opts:["Sticky note","Shared doc","Password manager","Browser address bar"], a:2 }
+/* ===== Questions bank with levels ===== */
+const bank = [
+  // Level 1 (basic)
+  {level:1,q:"Which is a strong password?",opts:["123456","password","Q#4tY9$2","abcdef"],a:2},
+  {level:1,q:"What is phishing?",opts:["Fishing","Tricking users","Video chat","Virus"],a:1},
+  {level:1,q:"Firewall protects your?",opts:["Network","Printer","Battery","Display"],a:0},
+  {level:1,q:"HTTPS means…",opts:["Secure connection","More ads","Free data","Higher speed"],a:0},
+  {level:1,q:"Safe email practice?",opts:["Click all links","Ignore spam","Share passwords","Open attachments"],a:1},
+  {level:1,q:"Best place for passwords?",opts:["Sticky note","Shared doc","Password manager","Browser address bar"],a:2},
+
+  // Level 2 (medium)
+  {level:2,q:"2FA adds…",opts:["Extra verification","Faster Wi-Fi","More storage","More tabs"],a:0},
+  {level:2,q:"Which one is NOT malware?",opts:["Trojan","Worm","Antivirus","Spyware"],a:2},
+  {level:2,q:"Good Wi-Fi practice?",opts:["Open public Wi-Fi","Share password","Use WPA2/WPA3","Turn off encryption"],a:2},
+  {level:2,q:"Suspicious link in email?",opts:["Click it","Report or delete","Forward widely","Ignore security"],a:1},
+  {level:2,q:"What’s a VPN?",opts:["Virtual Private Network","Verified Personal Network","Visible Public Node","Virtual Privacy Name"],a:0},
+
+  // Level 3 (advanced)
+  {level:3,q:"Strong password policy?",opts:["8 chars, no symbols","Use one password everywhere","12+ chars mix types","Write on desk"],a:2},
+  {level:3,q:"Ransomware does…",opts:["Encrypts files for payment","Speeds up PC","Blocks ads","Updates apps"],a:0},
+  {level:3,q:"Social engineering is…",opts:["Hardware attack","Physical theft","Tricking people","Code compilation"],a:2},
+  {level:3,q:"Public charger risk is called…",opts:["Juice jacking","Power boost","Fast charge","Green charge"],a:0},
+  {level:3,q:"Good backup rule?",opts:["1-1-0","3-2-1","0-1-1","2-2-0"],a:1}
 ];
 
-function getRandomQuestion() {
-  if (asked.length === allQuestions.length) asked = [];
-  let idx;
-  do { idx = Math.floor(Math.random() * allQuestions.length); }
-  while (asked.includes(idx));
-  asked.push(idx);
-  return allQuestions[idx];
-}
+/* ===== Build per-level decks (shuffled, unique per player) ===== */
+function shuffle(a){ for(let i=a.length-1;i>0;i--){ const j=Math.floor(Math.random()*(i+1)); [a[i],a[j]]=[a[j],a[i]]; } return a; }
+const decks = {
+  1: shuffle(bank.filter(b=>b.level===1).slice()),
+  2: shuffle(bank.filter(b=>b.level===2).slice()),
+  3: shuffle(bank.filter(b=>b.level===3).slice())
+};
+let currentQ = null;
 
-let currentQ = getRandomQuestion();
+/* =================== UI =================== */
+const $lv   = document.getElementById("lv");
+const $qdone= document.getElementById("qdone");
+const $sc   = document.getElementById("sc");
 
-function randCell(){
-  return {
-    x: Math.floor(Math.random()*(canvas.width/box))*box,
-    y: Math.floor(Math.random()*(canvas.height/box))*box
-  };
-}
-function cellsEqual(a,b){ return a.x===b.x && a.y===b.y; }
-
-function spawnFoodFor(i){
-  let p;
-  do { p = randCell(); } while (snake.some(s=>cellsEqual(s,p)));
-  foods[i] = { x:p.x, y:p.y, color:colors[i], idx:i };
+function updateHUD(){
+  $lv.textContent = String(level);
+  $qdone.textContent = String(answeredInLevel);
+  $sc.textContent = String(score);
 }
 
 function renderQuestion(){
   const q = currentQ;
-  document.getElementById("question").textContent = q.q;
-  const cont = document.getElementById("options");
-  cont.innerHTML = "";
+  const qDiv = document.getElementById("question");
+  const opts = document.getElementById("options");
+  qDiv.textContent = q ? q.q : "";
+  opts.innerHTML = "";
+  if(!q) return;
   q.opts.forEach((text,i)=>{
     const row=document.createElement("div");
     row.className="opt-row";
@@ -137,26 +159,122 @@ function renderQuestion(){
     const tx=document.createElement("div");
     tx.className="opt-text"; tx.textContent=text;
     row.appendChild(sw); row.appendChild(tx);
-    cont.appendChild(row);
+    opts.appendChild(row);
   });
 }
 
+/* =================== Food & movement =================== */
+function randCell(){ return { x:Math.floor(Math.random()*(canvas.width/box))*box, y:Math.floor(Math.random()*(canvas.height/box))*box }; }
+function equal(a,b){ return a.x===b.x && a.y===b.y; }
+function blocked(p){ return snake.some(s=>equal(s,p)) || foods.some(f=>f&&equal(f,p)); }
+
+function spawnFoodFor(i){
+  let p;
+  do { p = randCell(); } while (blocked(p));
+  foods[i] = { x:p.x, y:p.y, color:colors[i], idx:i };
+}
+
+/* =================== Input (fast touch + keys) =================== */
+function setDirection(newDir){
+  // prevent reversing directly
+  if(newDir==="LEFT"  && dir!=="RIGHT") queuedDir="LEFT";
+  if(newDir==="RIGHT" && dir!=="LEFT")  queuedDir="RIGHT";
+  if(newDir==="UP"    && dir!=="DOWN")  queuedDir="UP";
+  if(newDir==="DOWN"  && dir!=="UP")    queuedDir="DOWN";
+}
+
+document.addEventListener("keydown",(e)=>{
+  if(e.key==="ArrowLeft")  setDirection("LEFT");
+  if(e.key==="ArrowRight") setDirection("RIGHT");
+  if(e.key==="ArrowUp")    setDirection("UP");
+  if(e.key==="ArrowDown")  setDirection("DOWN");
+  if(["ArrowLeft","ArrowRight","ArrowUp","ArrowDown"].includes(e.key)) e.preventDefault();
+}, {passive:false});
+
+// Use touchstart for instant response; also mousedown for desktop clicks
+const addInstant = (id, d) => {
+  const el = document.getElementById(id);
+  el.addEventListener("touchstart", (e)=>{ e.preventDefault(); setDirection(d); }, {passive:false});
+  el.addEventListener("mousedown", (e)=>{ e.preventDefault(); setDirection(d); });
+};
+addInstant("up","UP"); addInstant("down","DOWN"); addInstant("left","LEFT"); addInstant("right","RIGHT");
+
+/* =================== Questions / Level logic =================== */
+function nextQuestion(){
+  const deck = decks[level];
+  if(deck.length === 0){ return null; }
+  return deck.shift();
+}
+
 function handleAnswer(colorIdx){
-  if (colorIdx===currentQ.a){
+  if(!currentQ) return;
+  if(colorIdx === currentQ.a){
     score += 5;
-    document.getElementById("feedback").textContent="✅ Correct! +5";
+    document.getElementById("feedback").textContent = "✅ Correct! +5";
   } else {
-    score=Math.max(0,score-2);
-    document.getElementById("feedback").textContent="❌ Wrong! -2";
+    score = Math.max(0, score - 2);
+    document.getElementById("feedback").textContent = "❌ Wrong! -2";
+  }
+  answeredInLevel++;
+  updateHUD();
+
+  if(answeredInLevel >= perLevelCount){
+    // level complete
+    if(level < 3){
+      level++;
+      moveInterval = levelSpeeds[level];
+      answeredInLevel = 0;
+      document.getElementById("feedback").textContent = "🎯 Level up! Starting Level " + level;
+      currentQ = nextQuestion();
+      renderQuestion();
+    } else {
+      // all levels complete
+      running = false;
+      document.getElementById("submitBtn").style.display="inline-block";
+      alert("🎉 Levels 1–3 complete! Final score: " + score);
+      window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
+    }
+  } else {
+    currentQ = nextQuestion();
+    renderQuestion();
+  }
+}
+
+/* =================== Game loop (requestAnimationFrame) =================== */
+function step(){
+  // apply queued direction just before moving
+  dir = queuedDir;
+
+  // compute next head
+  let hx = snake[0].x, hy = snake[0].y;
+  if(dir==="LEFT")  hx -= box;
+  if(dir==="RIGHT") hx += box;
+  if(dir==="UP")    hy -= box;
+  if(dir==="DOWN")  hy += box;
+
+  // wrap-around
+  if(hx < 0) hx = canvas.width - box;
+  if(hy < 0) hy = canvas.height - box;
+  if(hx >= canvas.width)  hx = 0;
+  if(hy >= canvas.height) hy = 0;
+
+  // eat?
+  const idx = foods.findIndex(f => f.x===hx && f.y===hy);
+  if(idx > -1){
+    handleAnswer(idx);
+    spawnFoodFor(idx); // respawn same color
+  } else {
+    snake.pop();
   }
 
-  if (asked.length >= questionsPerLevel){
-    stopGame("🎉 Level 1 Complete! Score: "+score);
+  // self-collision
+  const head = {x:hx,y:hy};
+  if(snake.some((s,i)=> i && equal(s, head))){
+    running = false;
+    alert("Game Over! Score: " + score);
     document.getElementById("submitBtn").style.display="inline-block";
-    window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
   } else {
-    currentQ=getRandomQuestion();
-    renderQuestion();
+    snake.unshift(head);
   }
 }
 
@@ -164,91 +282,64 @@ function draw(){
   ctx.fillStyle="#000";
   ctx.fillRect(0,0,canvas.width,canvas.height);
 
+  // foods
+  foods.forEach(f => { ctx.fillStyle = f.color; ctx.fillRect(f.x, f.y, box, box); });
+
+  // snake
   snake.forEach((s,i)=>{
-    ctx.fillStyle=i===0?"#00e0ff":"#0099aa";
-    ctx.fillRect(s.x,s.y,box,box);
+    ctx.fillStyle = i===0 ? "#00e0ff" : "#0099aa";
+    ctx.fillRect(s.x, s.y, box, box);
   });
 
-  foods.forEach(f=>{
-    ctx.fillStyle=f.color;
-    ctx.fillRect(f.x,f.y,box,box);
-  });
-
-  let hx=snake[0].x, hy=snake[0].y;
-  if(dir==="LEFT") hx-=box;
-  if(dir==="RIGHT") hx+=box;
-  if(dir==="UP") hy-=box;
-  if(dir==="DOWN") hy+=box;
-
-  // wrap walls
-  if(hx<0) hx=canvas.width-box;
-  if(hy<0) hy=canvas.height-box;
-  if(hx>=canvas.width) hx=0;
-  if(hy>=canvas.height) hy=0;
-
-  const eatIdx=foods.findIndex(f=>f.x===hx&&f.y===hy);
-  if(eatIdx>-1){
-    handleAnswer(eatIdx);
-    spawnFoodFor(eatIdx);
-  } else {
-    snake.pop();
-  }
-
-  const head={x:hx,y:hy};
-  if(snake.some((s,i)=>i&&cellsEqual(s,head))){
-    stopGame("Game Over! Score: "+score);
-    return;
-  }
-  snake.unshift(head);
-
-  ctx.fillStyle="#fff";
-  ctx.font="14px Arial";
-  ctx.fillText("Score: "+score,10,16);
+  // HUD in corner as backup
+  ctx.fillStyle="#fff"; ctx.font="14px Arial";
+  ctx.fillText("Score: "+score, 10, 16);
 }
 
-function stopGame(msg){
-  if(loopId) clearInterval(loopId);
-  loopId=null;
-  alert(msg);
+function loop(ts){
+  if(!running){ draw(); return; }
+  if(!lastTs) lastTs = ts;
+  const dt = ts - lastTs; lastTs = ts;
+  acc += dt;
+  // move in discrete steps while rendering every frame
+  if(acc >= moveInterval){ step(); acc = 0; }
+  draw();
+  requestAnimationFrame(loop);
 }
 
+/* =================== Score submission =================== */
 function sendScore(){
-  const name=prompt("Enter your name:");
-  if(!name){ alert("Please enter name."); return; }
-  const badge=score>=20?"Gold":score>=10?"Silver":"Bronze";
+  const name = prompt("Enter your name:");
+  if(!name){ alert("Please enter a name."); return; }
+  const badge = score>=60 ? "Gold" : score>=30 ? "Silver" : "Bronze";
 
-  const form=document.getElementById("scoreForm");
-  form.elements["name"].value=name;
-  form.elements["score"].value=String(score);
-  form.elements["level"].value="Level 1";
-  form.elements["badge"].value=badge;
+  // POST via hidden form (CORS-proof)
+  const form = document.getElementById("scoreForm");
+  form.elements["name"].value  = name;
+  form.elements["score"].value = String(score);
+  form.elements["level"].value = "Levels 1–3";
+  form.elements["badge"].value = badge;
   form.submit();
 
-  const params=new URLSearchParams({name,score:String(score),level:"Level 1",badge});
-  new Image().src=`${scriptURL}?${params.toString()}&t=${Date.now()}`;
+  // GET beacon backup
+  const params = new URLSearchParams({name,score:String(score),level:"Levels 1–3",badge});
+  new Image().src = `${scriptURL}?${params.toString()}&t=${Date.now()}`;
 
   alert("✅ Score submitted. Check the leaderboard.");
 }
+document.getElementById("submitBtn").addEventListener("click", sendScore);
 
-document.getElementById("submitBtn").addEventListener("click",sendScore);
-
-document.addEventListener("keydown",(e)=>{
-  if(e.key==="ArrowLeft"&&dir!=="RIGHT") dir="LEFT";
-  if(e.key==="ArrowUp"&&dir!=="DOWN") dir="UP";
-  if(e.key==="ArrowRight"&&dir!=="LEFT") dir="RIGHT";
-  if(e.key==="ArrowDown"&&dir!=="UP") dir="DOWN";
-  if(["ArrowLeft","ArrowUp","ArrowRight","ArrowDown"].includes(e.key)) e.preventDefault();
-});
-document.getElementById("up").onclick=()=>{if(dir!=="DOWN") dir="UP";};
-document.getElementById("down").onclick=()=>{if(dir!=="UP") dir="DOWN";};
-document.getElementById("left").onclick=()=>{if(dir!=="RIGHT") dir="LEFT";};
-document.getElementById("right").onclick=()=>{if(dir!=="LEFT") dir="RIGHT";};
-
+/* =================== Start =================== */
 function start(){
-  foods=new Array(4);
+  // foods
+  foods = new Array(4);
   for(let i=0;i<4;i++) spawnFoodFor(i);
+
+  // first question of level 1
+  currentQ = nextQuestion();
   renderQuestion();
-  loopId=setInterval(draw,speed);
+  updateHUD();
+  requestAnimationFrame(loop);
 }
 start();
 </script>
